# open_wheel_sim

./: .gitignore  AGENTS.md  CMakeLists.txt  PROJECT_STATE.md  README.md  car_description.txt  initial_prompt_instructions.txt
assets/: README.txt
cmake/: BundleSDL3.cmake  Info.plist.in
config/: ffb_default.json  graphics_default.json  input_default.json  track_hillcircuit_default.json  track_oval_default.json  vehicle_openwheel_default.json
docs/: architecture.md  ffb_macos.md  packaging_macos.md  physics.md  running.md  setup_macos.md  tuning.md
scripts/: build_and_run.sh  generate_geometry.py  generate_high_poly_meshes.py  generate_pbr_textures.py
src/: main.cpp
src/app/: App.cpp  App.h  GameLoop.cpp  GameLoop.h
src/audio/: SoundManager.cpp  SoundManager.h
src/config/: AppConfig.cpp  AppConfig.h  ConfigFile.cpp  ConfigFile.h
src/ffb/: ForceFeedbackManager.cpp  ForceFeedbackManager.h
src/game/: LapTimer.cpp  LapTimer.h  RaceSession.cpp  RaceSession.h  Track.cpp  Track.h
src/input/: InputActions.h  InputManager.cpp  InputManager.h  SDLJoystickInput.cpp  SDLJoystickInput.h
src/physics/: Vehicle.cpp  Vehicle.h  VehicleConfig.cpp  VehicleConfig.h
src/platform/: FileSystem.cpp  FileSystem.h  WindowSDL.cpp  WindowSDL.h
src/render/: ImageLoader.h  Math.h  MetalRenderer.h  MetalRenderer.mm  ObjLoader.h  RenderTypes.h  Renderer.h
src/ui/: DebugOverlay.cpp  DebugOverlay.h
tests/: config_tests.cpp  game_tests.cpp
